Creates gallery markup

--- a/src/sass/_search-form.scss
+++ b/src/sass/_search-form.scss
@@ -33,6 +33,7 @@ input {
     outline: none;
     border-radius: 5px;
     border: 2px solid #323ea8;
+    box-shadow: 0px 2px 3px 0px rgba(150,147,150,1);
 }
 
 .hidden {
