--- a/src/sass/_search-form.scss
+++ b/src/sass/_search-form.scss
@@ -12,6 +12,7 @@ button {
 input {
     margin: 0;
     padding: 10px;
+    height: 40px;
     border: none;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
