--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,8 +1,9 @@
 
-img {
+.photo-card img {
     display: block;
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     }
 
     p {
@@ -20,9 +21,16 @@ img {
     outline: 2px solid red;
     margin: 10px; 
     width: calc((100% - 80px) / 4);
+    height: calc((100% - 80px) / 4);
     box-shadow: 0px 3px 4px 0px rgba(150,147,150,1);
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
+}
+
+.photo-thumb {
+    width: 100%;
+    height: 300px;
+    
 }
 
 .info {
@@ -30,7 +38,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    
+    text-align: center;
 }
 
 
